# continuum

./: .gitignore  ARCHITECTURE.md  CLAUDE-ALIAS-SETUP.md  CONTINUUM-PLAINTEXT-DOCS-REVIEW.md  Cargo.toml  MCP-RAG-SYSTEM.md  MIGRATION-STATUS.md  PLAIN-TEXT-ARCHITECTURE.md  PLAIN-TEXT-MIGRATION-COMPLETE.md  QUALITY-CONTROL.md  QUICK-START.md  README.md  USAGE.md  diagnose-mac.sh  setup-auto-capture.sh  setup-claude-alias.sh
continuum-claude/: Cargo.toml
continuum-claude/src/: main.rs
continuum-cli/: Cargo.toml
continuum-cli/src/: main.rs
continuum-codex/: Cargo.toml
continuum-codex/src/: main.rs
continuum-core/: Cargo.toml
continuum-core/src/: compression.rs  lib.rs  loop_detection.rs  plaintext.rs  types.rs
continuum-core/src/adapters/: claude_code.rs  codex.rs  goose.rs  mod.rs
continuum-gemini/: Cargo.toml
continuum-gemini/src/: main.rs
continuum-goose/: Cargo.toml
continuum-goose/src/: main.rs
