[package]
name = "continuum-claude"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Wrapper for Claude Code that logs conversations to Continuum"

[[bin]]
name = "continuum-claude"
path = "src/main.rs"

[dependencies]
continuum-core = { path = "../continuum-core" }
clap.workspace = true
color-eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
atty = "0.2"
exec = "0.3"
which = "6.0"
