[package]
name = "continuum-codex"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "continuum-codex"
path = "src/main.rs"

[dependencies]
continuum-core = { path = "../continuum-core" }
color-eyre.workspace = true
tokio.workspace = true
which = "6.0"
chrono.workspace = true
serde_json.workspace = true
