[package]
name = "continuum-gemini"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "continuum-gemini"
path = "src/main.rs"

[dependencies]
continuum-core = { path = "../continuum-core" }
color-eyre.workspace = true
which = "6.0"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
